# horae

./: .gitignore  Cargo.toml  README.md  package.json
apps/gui/: Cargo.toml  tauri.conf.json
apps/gui/src/: commands.rs  lib.rs  main.rs
apps/tui/: Cargo.toml
apps/tui/src/: main.rs
crates/adapters/persistence_memory/: Cargo.toml
crates/adapters/persistence_memory/src/: lib.rs  session.rs  study_block.rs  subject.rs  task.rs
crates/application/: Cargo.toml
crates/application/src/: helpers.rs  lib.rs
crates/application/src/session/: commands.rs  ports.rs  queries.rs
crates/application/src/study_block/: commands.rs  ports.rs  queries.rs
crates/application/src/subject/: commands.rs  ports.rs  queries.rs
crates/application/src/task/: commands.rs  ports.rs  queries.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs
crates/domain/src/model/: days_of_week.rs  mod.rs  session.rs  study_block.rs  subject.rs  task.rs  topic.rs
src/: app.rs  main.rs  util.rs
src/components/: analytics.rs  input.rs  mod.rs  questions.rs  subjects.rs  tasks.rs  timer.rs
src/db/: mod.rs  question.rs  study_block.rs  subject.rs  task.rs
src/domain/model/: mod.rs  question.rs  study_block.rs  subject.rs  task.rs
