[package]
name = "horae"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["victor_tiss@outlook.com"]

[dependencies]
ratatui = "0.30.0"
color-eyre = "0.6"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
tui-input = "*"
chrono = "0.4"

[lints.rust]
unsafe_code = "forbid"
